@startuml

title __LIB's Class Diagram__\n

  namespace com.linnik.lab4.lib {
    class com.linnik.lab4.lib.Console {
        {static} ~ devs : ArrayList<SmartDev>
        {static} ~ in : Scanner
        {static} + TransformDate()
        {static} + addDev()
        {static} + deleteDev()
        {static} + getTransformDate()
        {static} + main()
        {static} + showDev()
    }
  }
  

  namespace com.linnik.lab4.lib {
    class com.linnik.lab4.lib.Floor {
        + mode : String[]
        - curMode : String
        - temperature : int
        + EndDev()
        + StartDev()
        + getCurMode()
        + getMode()
        + getTemperature()
        + setCurMode()
        + setTemperature()
        + toString()
        # Floor()
    }
  }
  

  namespace com.linnik.lab4.lib {
    class com.linnik.lab4.lib.Fridge {
        + mode : String[]
        - curMode : String
        - temperature : int
        + EndDev()
        + StartDev()
        + getCurMode()
        + getMode()
        + getTemperature()
        + setCurMode()
        + setTemperature()
        + toString()
        # Fridge()
    }
  }
  

  namespace com.linnik.lab4.lib {
    class com.linnik.lab4.lib.Hood {
        + mode : String[]
        - brightness : int
        - curRGBColor : String
        + EndDev()
        + StartDev()
        + getBrightness()
        + getMode()
        + getRGBColor()
        + setBrightness()
        + setRGBColor()
        + toString()
        # Hood()
    }
  }
  

  namespace com.linnik.lab4.lib {
    class com.linnik.lab4.lib.Humidifier {
        + mode : String[]
        - Humidity : int
        - curMode : String
        + EndDev()
        + StartDev()
        + getCurMode()
        + getHumidity()
        + getMode()
        + setCurMode()
        + setHumidity()
        + toString()
        # Humidifier()
    }
  }
  

  namespace com.linnik.lab4.lib {
    interface com.linnik.lab4.lib.IControlDev {
        {abstract} + EndDev()
        {abstract} + StartDev()
    }
  }
  

  namespace com.linnik.lab4.lib {
    class com.linnik.lab4.lib.Lights {
        + mode : String[]
        - brightness : int
        - curRGBColor : String
        + EndDev()
        + StartDev()
        + getBrightness()
        + getMode()
        + getRGBColor()
        + setBrightness()
        + setRGBColor()
        + toString()
        # Lights()
    }
  }
  

  namespace com.linnik.lab4.lib {
    abstract class com.linnik.lab4.lib.SmartDev {
        - state : boolean
        - type : String
        + changeState()
        + getType()
        + isState()
        + toString()
        # SmartDev()
        # setState()
        # setType()
    }
  }
  

  com.linnik.lab4.lib.Floor -up-|> com.linnik.lab4.lib.SmartDev
  com.linnik.lab4.lib.Fridge -up-|> com.linnik.lab4.lib.SmartDev
  com.linnik.lab4.lib.Hood -up-|> com.linnik.lab4.lib.SmartDev
  com.linnik.lab4.lib.Humidifier -up-|> com.linnik.lab4.lib.SmartDev
  com.linnik.lab4.lib.Lights -up-|> com.linnik.lab4.lib.SmartDev
  com.linnik.lab4.lib.SmartDev .up.|> com.linnik.lab4.lib.IControlDev


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
